--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
           <li class="mask">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
-              alt="face-2"
+              alt=""
+              srcset=""
             />
             <div class="mask_details">
-              <h5>
-                BLACK FACE <br />
-                MASK
-              </h5>
+              <h5>BLACK FACE MASK</h5>
               <p>$ 100 USD</p>
               <button id="">View Product</button>
             </div>
@@ -61,11 +59,11 @@
             />
             <div class="mask_details">
               <h5>
-                SPIDER MAN <br />
-                FACE MASK
+                SPIDER MAN FACE<br />
+                MASK
               </h5>
               <p>$100 USD</p>
-              <button>View Product</button>
+              <button id="">View Product</button>
             </div>
           </li>
           <li class="mask">
@@ -74,9 +72,12 @@
               alt="face-3"
             />
             <div class="mask_details">
-              <h5>THE MONSTER UNDER <br />THE BED FACE MASK</h5>
+              <h5>
+                THE MONSTER UNDER <br />
+                THE BED FACE MASK
+              </h5>
               <p>$ 100 USD</p>
-              <button>View Product</button>
+              <button id="">View Product</button>
             </div>
           </li>
           <li class="mask">
@@ -90,7 +91,7 @@
                 FAST MASK
               </h5>
               <p>$ 100 USD</p>
-              <button>View Product</button>
+              <button id="">View Product</button>
             </div>
           </li>
           <li class="mask">
@@ -99,8 +100,9 @@
               alt="face-5"
             />
             <div class="mask_details">
-              <h5>CLASSIC BANDANA FACE MASK</h5>
-              <p>100 USD</p>
+              <h5>CLASSIC BANDANA <br />FACE MASK</h5>
+              <p>$100 USD</p>
+
               <button>View Product</button>
             </div>
           </li>
@@ -147,7 +149,7 @@
           </li>
         </ul>
         <p>
-          Fast mask gives you the coverage you need when being active <br />and
+          Fast Mask gives you the coverage you need when being active and<br />
           keeps you looking great while doing it.
         </p>
 
@@ -155,61 +157,99 @@
       </section>
 
       <section class="details">
-        <h3>WHY CHOOSE FAST MASK?</h3>
-        <ul>
+        <h3>
+          WHY CHOOSE <br />
+          FAST MASK?
+        </h3>
+        <ul class="details_list">
           <li>Protection from the elements</li>
-          <li>Stay cool while riding,paintballing, hunting,snowboarding,etc</li>
+
           <li>
-            Moisture-wicking microfiber (you stay dry, and your skin breathes)
+            Stay cool while riding , paintballing, <br />
+            hunting,snowboarding,etc
+          </li>
+          <li>
+            Moisture-wicking microfiber (you stay dry, <br />
+            and your skin breathes)
           </li>
           <li>Almost 70 original and exclusive designs</li>
           <li>The print won't fade</li>
         </ul>
       </section>
 
-      <section>
-        <h3>EXTREME SPORTS LOVERS THINK THEY'RE GREAT!</h3>
-        <ul>
-          <li>"Great deal and showed up pretty fast" -Tyler H</li>
-          <li>"Great fit under my helmet and super comfortable" - Carlos R</li>
+      <section class="review">
+        <div class="review_header">
+          <h3>EXTREME SPORTS <br />LOVERS THINK <br />THEY'RE GREAT!</h3>
+        </div>
+
+        <ul class="review_list">
           <li>
-            "It's the best to use against the sun ! Thank you!" -Armando Ismael
-            Garcia
+            "Great deal and showed up pretty fast." <br />
+            -Tyler H
           </li>
-          <li>"Worth it! Grab several!" -Tabatha smith</li>
-          <li>"Love my Fast Masks" -Jared weitzel</li>
+          <li>
+            "Great fit under my <br />
+            helmet and super comfortable." <br />
+          </li>
+          <li>
+            "It's the best to use against the sun ! <br />Thank you!." <br />
+            -Armando Ismael Garcia
+          </li>
+        </ul>
+        <ul class="review_list2">
+          <li>
+            "Worth it! Grab several!." <br />
+            <span class="author">-Tabatha smith</span>
+          </li>
+          <li>
+            "Love my Fast Masks." <br />
+            <span class="author"> -Jared weitzel</span>
+          </li>
           <li>Shop now</li>
         </ul>
 
-        <div>
+        <div class="review_element">
           <p>PAIR YOUR MASK WITH GLOVES</p>
-          <img src="" alt="" srcset="" />
-          <img src="" alt="" srcset="" />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
+            alt="img"
+            srcset=""
+          />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
+            alt="img"
+            srcset=""
+          />
         </div>
       </section>
 
       <footer>
-        <div>
-          <h2>ABOUT FAST MASK</h2>
-          <p>
-            Our company stems from our passion for creative design and extreme
-            design and <br />
-            extreme activites. we want keep you well protected and help you
-            express your own style and attitude with our awesome designs.
-          </p>
-          <p>
-            our gear isn't for everyone.It's for those discerning and bold
-            <br />
-            enough to be their authentic self
-          </p>
+        <div class="footer-container">
+          <img class="banner_img"
+          src="https://images.unsplash.com/photo-1558981806-ec527fa84c39?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="img-1"" alt="">
+          <div class="banner_container3">
+            <h2>ABOUT FAST MASK</h2>
+            <p>
+              Our company stems from our passion for creative design and extreme
+              design and <br />
+              extreme activites. we want keep you well protected and help you
+              express your own style and attitude with our awesome designs.
+            </p>
+            <p>
+              our gear isn't for everyone.It's for those discerning and bold
+              <br />
+              enough to be their authentic self
+            </p>
 
-          <p>
-            you won't find another company that cares as much as we do. we
-            <br />
-            ship out all our orders extra fast because we know there's nothing
-            worse <br />
-            than waiting for really cool stuff you just bought.
-          </p>
+            <p>
+              you won't find another company that cares as much as we do. we
+              <br />
+              ship out all our orders extra fast because we know there's nothing
+              worse <br />
+              than waiting for really cool stuff you just bought.
+            </p>
+          </div>
         </div>
       </footer>
     </main>
