--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fast Mask</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
 
   <body>
@@ -16,13 +16,7 @@
     <!-- main content starts here -->
     <main>
       <section class="banner">
-        <img
-          class="banner_img"
-          src="https://images.unsplash.com/photo-1558981806-ec527fa84c39?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img-1"
-        />
-
-        <div class="banner_container">
+        <div class="wrapper">
           <p>
             FACE MASK FOR <br />
             THRILL-SEEKERS <br />
@@ -31,184 +25,193 @@
             They're a great way to rock your favorite activities <br />while
             staying cool,dry and protected.
           </p>
-
           <button id="banner_btn" type="button">Shop Now</button>
         </div>
-
-        <div id="banner_end">DISCOVER ALL OUR AWESOME DESIGN</div>
       </section>
 
-      <section id="facecards">
-        <ul class="mask_grid">
-          <li class="mask">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
-              alt=""
-              srcset=""
-            />
-            <div class="mask_details">
-              <h5>BLACK FACE MASK</h5>
-              <p>$ 100 USD</p>
-              <button id="">View Product</button>
-            </div>
-          </li>
-          <li class="mask">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
-              alt="face-2"
-            />
-            <div class="mask_details">
-              <h5>
-                SPIDER MAN FACE<br />
-                MASK
-              </h5>
-              <p>$100 USD</p>
-              <button id="">View Product</button>
-            </div>
-          </li>
-          <li class="mask">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
-              alt="face-3"
-            />
-            <div class="mask_details">
-              <h5>
-                THE MONSTER UNDER <br />
-                THE BED FACE MASK
-              </h5>
-              <p>$ 100 USD</p>
-              <button id="">View Product</button>
-            </div>
-          </li>
-          <li class="mask">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
-              alt="face-4"
-            />
-            <div class="mask_details">
-              <h5>
-                CANADA FLAG <br />
-                FAST MASK
-              </h5>
-              <p>$ 100 USD</p>
-              <button id="">View Product</button>
-            </div>
-          </li>
-          <li class="mask">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
-              alt="face-5"
-            />
-            <div class="mask_details">
-              <h5>CLASSIC BANDANA <br />FACE MASK</h5>
-              <p>$100 USD</p>
-
-              <button>View Product</button>
-            </div>
-          </li>
-        </ul>
-        <div id="facecard_btn">
-          <button>checkout the full collection</button>
+      <section class="facecards">
+        <span id="banner_end">DISCOVER ALL OUR AWESOME DESIGN</span>
+        <div class="wrapper">
+          <ul class="mask_grid">
+            <li class="mask">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
+                alt=""
+                srcset=""
+              />
+              <div class="mask_details">
+                <h5>
+                  BLACK FACE <br />
+                  MASK
+                </h5>
+                <p>$ 10.0 USD</p>
+                <button id="">View Product</button>
+              </div>
+            </li>
+            <li class="mask">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
+                alt="face-2"
+              />
+              <div class="mask_details">
+                <h5>
+                  SPIDER MAN FACE<br />
+                  MASK
+                </h5>
+                <p>$10.0 USD</p>
+                <button id="">View Product</button>
+              </div>
+            </li>
+            <li class="mask">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
+                alt="face-3"
+              />
+              <div class="mask_details">
+                <h5>
+                  THE MONSTER UNDER <br />
+                  THE BED FACE MASK
+                </h5>
+                <p>$ 10.0 USD</p>
+                <button id="">View Product</button>
+              </div>
+            </li>
+            <li class="mask">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
+                alt="face-4"
+              />
+              <div class="mask_details">
+                <h5>
+                  CANADA FLAG <br />
+                  FAST MASK
+                </h5>
+                <p>$ 10.0 USD</p>
+                <button id="">View Product</button>
+              </div>
+            </li>
+            <li class="mask">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
+                alt="face-5"
+              />
+              <div class="mask_details">
+                <h5>CLASSIC BANDANA <br />FACE MASK</h5>
+                <p>$10.0 USD</p>
+                <button>View Product</button>
+              </div>
+            </li>
+          </ul>
+          <button id="facecard_btn">Checkout the full collection</button>
         </div>
       </section>
 
       <section class="multipurpose">
-        <h3>MULTIPURPOSE MASKS</h3>
-        <p>Wear it as a:</p>
-        <ul class="multipurpose_masks">
-          <li class="multipurpose_type">
-            <img src="./assets/engineer.png" alt="" />
-            <p>FACE MASK</p>
-          </li>
-          <li class="multipurpose_type">
-            <img src="./assets/engineer.png" alt="" />
-            <p>BANDANA</p>
-          </li>
-          <li class="multipurpose_type">
-            <img src="./assets/engineer.png" alt="" />
-            <p>
-              NECK <br />
-              GAITER
-            </p>
-          </li>
-          <li class="multipurpose_type">
-            <img src="./assets/engineer.png" alt="" />
-            <p>WRISTBAND</p>
-          </li>
-          <li class="multipurpose_type">
-            <img src="./assets/engineer.png" alt="" />
-            <p>BEANIE</p>
-          </li>
-          <li class="multipurpose_type">
-            <img src="./assets/engineer.png" alt="" />
-            <p>HEADBAND</p>
-          </li>
-          <li class="multipurpose_type">
-            <img src="./assets/engineer.png" alt="" />
-            <p>HAIR TIE</p>
-          </li>
-        </ul>
-        <p>
-          Fast Mask gives you the coverage you need when being active and<br />
-          keeps you looking great while doing it.
-        </p>
+        <div class="wrapper">
+          <h3>MULTIPURPOSE MASKS</h3>
+          <p>Wear it as a:</p>
+          <ul class="multipurpose_masks">
+            <li class="multipurpose_type">
+              <img src="./assets/engineer.png" alt="" />
+              <p>FACE MASK</p>
+            </li>
+            <li class="multipurpose_type">
+              <img src="./assets/engineer.png" alt="" />
+              <p>BANDANA</p>
+            </li>
+            <li class="multipurpose_type">
+              <img src="./assets/engineer.png" alt="" />
+              <p>
+                NECK <br />
+                GAITER
+              </p>
+            </li>
+            <li class="multipurpose_type">
+              <img src="./assets/engineer.png" alt="" />
+              <p>WRISTBAND</p>
+            </li>
+            <li class="multipurpose_type">
+              <img src="./assets/engineer.png" alt="" />
+              <p>BEANIE</p>
+            </li>
+            <li class="multipurpose_type">
+              <img src="./assets/engineer.png" alt="" />
+              <p>HEADBAND</p>
+            </li>
+            <li class="multipurpose_type">
+              <img src="./assets/engineer.png" alt="" />
+              <p>HAIR TIE</p>
+            </li>
+          </ul>
+          <p>
+            Fast Mask gives you the coverage you need when being active and<br />
+            keeps you looking great while doing it.
+          </p>
 
-        <button id="multipurpose_btn">Shop now</button>
+          <button id="multipurpose_btn">Shop now</button>
+        </div>
       </section>
 
       <section class="details">
-        <h3>
-          WHY CHOOSE <br />
-          FAST MASK?
-        </h3>
-        <ul class="details_list">
-          <li>Protection from the elements</li>
+        <div class="wrapper">
+          <div class="details_element">
+            <h3>WHY CHOOSE FAST MASK?</h3>
+            <ul class="details_list">
+              <li>Protection from the elements</li>
 
-          <li>
-            Stay cool while riding , paintballing, <br />
-            hunting,snowboarding,etc
-          </li>
-          <li>
-            Moisture-wicking microfiber (you stay dry, <br />
-            and your skin breathes)
-          </li>
-          <li>Almost 70 original and exclusive designs</li>
-          <li>The print won't fade</li>
-        </ul>
+              <li>
+                Stay cool while riding , paintballing, <br />
+                hunting,snowboarding,etc
+              </li>
+              <li>
+                Moisture-wicking microfiber (you stay dry, <br />
+                and your skin breathes)
+              </li>
+              <li>Almost 70 original and exclusive designs</li>
+              <li>The print won't fade</li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <section class="review">
-        <div class="review_header">
-          <h3>EXTREME SPORTS <br />LOVERS THINK <br />THEY'RE GREAT!</h3>
+        <div class="wrapper">
+          <div class="review_header">
+            <h3>EXTREME SPORTS <br />LOVERS THINK <br />THEY'RE GREAT!</h3>
+          </div>
+
+          <ul class="review_list">
+            <li>
+              "Great deal and showed up pretty fast." <br />
+              -Tyler H
+            </li>
+            <li>
+              "Great fit under my <br />
+              helmet and super comfortable." <br />
+              -carlos R.
+            </li>
+            <li>
+              "It's the best to use against the sun ! <br />Thank you!." <br />
+              -Armando Ismael Garcia
+            </li>
+          </ul>
+
+          <ul class="review_list2">
+            <li>
+              "Worth it! Grab several!." <br />
+              <span class="author">-Tabatha smith</span>
+            </li>
+            <li>
+              "Love my Fast Masks." <br />
+              <span class="author"> -Jared weitzel</span>
+            </li>
+            <li>Shop now</li>
+          </ul>
         </div>
+      </section>
 
-        <ul class="review_list">
-          <li>
-            "Great deal and showed up pretty fast." <br />
-            -Tyler H
-          </li>
-          <li>
-            "Great fit under my <br />
-            helmet and super comfortable." <br />
-          </li>
-          <li>
-            "It's the best to use against the sun ! <br />Thank you!." <br />
-            -Armando Ismael Garcia
-          </li>
-        </ul>
-        <ul class="review_list2">
-          <li>
-            "Worth it! Grab several!." <br />
-            <span class="author">-Tabatha smith</span>
-          </li>
-          <li>
-            "Love my Fast Masks." <br />
-            <span class="author"> -Jared weitzel</span>
-          </li>
-          <li>Shop now</li>
-        </ul>
-
-        <div class="review_element">
+      <section class="review_element">
+        <div class="wrapper">
           <p>PAIR YOUR MASK WITH GLOVES</p>
           <img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSN5l6Rez11skWc_Kiu8C7guM7SoF_Ccz1QA&s"
@@ -223,33 +226,28 @@
         </div>
       </section>
 
-      <footer>
-        <div class="footer-container">
-          <img class="banner_img"
-          src="https://images.unsplash.com/photo-1558981806-ec527fa84c39?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img-1"" alt="">
-          <div class="banner_container3">
-            <h2>ABOUT FAST MASK</h2>
-            <p>
-              Our company stems from our passion for creative design and extreme
-              design and <br />
-              extreme activites. we want keep you well protected and help you
-              express your own style and attitude with our awesome designs.
-            </p>
-            <p>
-              our gear isn't for everyone.It's for those discerning and bold
-              <br />
-              enough to be their authentic self
-            </p>
+      <footer class="banner">
+        <div class="wrapper">
+          <h2>ABOUT FAST MASK</h2>
+          <p>
+            Our company stems from our passion for creative design and extreme
+            design and <br />
+            extreme activites. we want keep you well protected and help you
+            express your own style and attitude with our awesome designs.
+          </p>
+          <p>
+            our gear isn't for everyone.It's for those discerning and bold
+            <br />
+            enough to be their authentic self
+          </p>
 
-            <p>
-              you won't find another company that cares as much as we do. we
-              <br />
-              ship out all our orders extra fast because we know there's nothing
-              worse <br />
-              than waiting for really cool stuff you just bought.
-            </p>
-          </div>
+          <p>
+            you won't find another company that cares as much as we do. we
+            <br />
+            ship out all our orders extra fast because we know there's nothing
+            worse <br />
+            than waiting for really cool stuff you just bought.
+          </p>
         </div>
       </footer>
     </main>
